--- a/weather-app-frontend/login.html
+++ b/weather-app-frontend/login.html
@@ -5,9 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="login.css">
-    <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-auth-compat.js"></script>
-    <script src="login.js" defer></script>
 </head>
 <body>
     <div class="container">
@@ -15,11 +12,12 @@
             <aside class="sidebar">
                 <div class="logo">
                     <img src="images/logo2.png" alt="Logo">
-                    <h1>AGRI-SPHERE</h1>
+                    <h1>FARMIFY</h1>
                 </div>
                 <nav>
                     <ul>
                         <li><a href="index.html"><span class="icon">🏠</span> Dashboard</a></li>
+                        <li><a href="bio.html"><span>♻️</span> Biogas Production</a></li>
                         <li><a href="soil.html"><span class="icon">🧪</span> Soil Testing</a></li>
                         <li><a href="crop.html"><span class="icon">🌱</span> Crop Recommendation</a></li>
                         <li><a href="detect.html"><span class="icon">🦠</span> Disease Detection</a></li>
@@ -36,7 +34,7 @@
                     <img src="images/logo2.png" alt="Welcome" class="welcome-icon">
                     <h2>Welcome Back</h2>
                     <p>Don't have an account? <a href="signup.html">Create today!</a></p>
-                    <form>
+                    <form id="loginForm">
                         <div class="form-group">
                             <label for="username">Username</label>
                             <input type="text" id="username" name="username" required>
@@ -57,9 +55,21 @@
                 </div>
             </section>
         </main>
-        <!-- <footer>
-            <p>© by Ghosts in the Wire</p>
-        </footer> -->
     </div>
+    <script>
+        const loginForm = document.getElementById('loginForm');
+
+        loginForm.addEventListener('submit', (e) => {
+            e.preventDefault(); 
+            const username = document.getElementById('username').value;
+            const password = document.getElementById('password').value;
+
+            if (username && password) {
+                window.location.href = 'index.html';
+            } else {
+                alert('Please enter your username and password.');
+            }
+        });
+    </script>
 </body>
 </html>
