--- a/weather-app-frontend/signup.html
+++ b/weather-app-frontend/signup.html
@@ -217,5 +217,13 @@
             </form>
         </main>
     </div>
+        <script>
+        const signupForm = document.getElementById('signupForm');
+
+        signupForm.addEventListener('submit', (e) => {
+            e.preventDefault(); 
+            window.location.href = 'index.html';
+        });
+    </script>
 </body>
 </html>
