--- a/weather-app-frontend/login.html
+++ b/weather-app-frontend/login.html
@@ -12,7 +12,7 @@
             <aside class="sidebar">
                 <div class="logo">
                     <img src="images/logo2.png" alt="Logo">
-                    <h1>FARMIFY</h1>
+                    <h1>AGRI-SPHERE</h1>
                 </div>
                 <nav>
                     <ul>
